tests/build/cases/property/missing_event_prefix.stderr
error: property marked `event` does not have prefix `on_` or `is_`
 --> cases/property/missing_event_prefix.rs:4:8
  |
4 | pub fn event_property(child: impl UiNode, input: bool) -> impl UiNode {
  |        ^^^^^^^^^^^^^^
